Spinner added to chart-card components.

--- a/src/app/components/chart-card/chart-card.component.html
+++ b/src/app/components/chart-card/chart-card.component.html
@@ -4,6 +4,7 @@
     <mat-card-title>{{ title }}</mat-card-title>
     <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
   </mat-card-header>
+  <mat-spinner diameter="20" *ngIf="isChartLoading || !isLoaded"></mat-spinner>
   <mat-card-content [id]="chartHolderID"></mat-card-content>
   <mat-divider></mat-divider>
   <mat-card-actions align="end">
