--- a/src/app/components/chart-card/chart-card.component.scss
+++ b/src/app/components/chart-card/chart-card.component.scss
@@ -1,3 +1,13 @@
+mat-card {
+  position: relative;
+}
+
+mat-spinner {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
 mat-card-content {
   margin: 0;
 }
