Material theme added to charts. Expense line chart renamed to balance line chart.

--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -21,11 +21,11 @@
   </div>
   <div fxFlex="50" fxFlex.xs="34">
     <app-chart-card
-      #expenseLineChart
+      #balanceChart
       titleIcon="leaderboard"
-      title="Expense Line Chart"
+      title="Balance Chart"
       subtitle="Shows how your balance varied over time."
-      [isChartLoading]="isExpenseLineLoading"
+      [isChartLoading]="isBalanceLineLoading"
     ></app-chart-card>
   </div>
 </div>
