--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="toolbar-sticky toolbar-height toolbar-padding mat-elevation-z6">
-  <button mat-icon-button color="accent" *ngIf="!authService.isLoggedIn()" (click)="menuAction()">
+  <button mat-icon-button color="accent" *ngIf="authService.isLoggedIn()" (click)="menuAction()">
     <mat-icon>menu</mat-icon>
   </button>
 
