--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,1 +1,2 @@
-<p>landing works!</p>
+<button mat-raised-button (click)="googleLogin()">Login with Google</button>
+<button mat-raised-button (click)="facebookLogin()">Login with Facebook</button>
