--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,12 @@
-<p>profile works!</p>
+<div fxFlex fxLayout="row" fxLayoutAlign="center">
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+  <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100" class="content">
+    <div class="profile-photo-holder">
+      <img src="assets/photos/aot.jpg" alt="profile_photo" class="mat-elevation-z6" />
+      <div class="profile-photo-overlay"></div>
+      <div class="user-full-name">{{ 'John' }} {{ 'Doe' }}</div>
+      <mat-spinner diameter="20" color="accent"></mat-spinner>
+    </div>
+  </div>
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+</div>
