--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -6,7 +6,7 @@
   position: relative;
   color: white;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .profile-photo-holder img {
@@ -18,7 +18,7 @@
 .profile-photo-overlay {
   background-color: rgb(0, 0, 0);
   opacity: 0.533;
-  height: 100%;
+  height: calc(100% - 5px);
   width: 100%;
 
   border-radius: 10px;
