OnClick Action added to ActionHeaderCard.

--- a/src/app/components/action-header-card/action-header-card.component.html
+++ b/src/app/components/action-header-card/action-header-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mid-align">
   <div class="header">{{ header }}</div>
   <span class="spacer"></span>
-  <button mat-icon-button color="accent">
+  <button mat-icon-button color="accent" (click)="onAction()">
     <mat-icon>{{ iconName }}</mat-icon>
   </button>
 </mat-card>
