--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -1,1 +1,41 @@
-<p>transaction-filter-form works!</p>
+<div class="container">
+  <p>Transaction Filter</p>
+
+  <form>
+    <mat-form-field appearance="outline">
+      <mat-label>Start Amount</mat-label>
+      <input matInput />
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>End Amount</mat-label>
+      <input matInput />
+    </mat-form-field>
+    <br />
+    <br />
+    <mat-form-field appearance="fill">
+      <mat-label>Start Date</mat-label>
+      <input matInput [matDatepicker]="startPicker" />
+      <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+      <mat-datepicker #startPicker></mat-datepicker>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="fill">
+      <mat-label>End Date</mat-label>
+      <input matInput [matDatepicker]="endPicker" />
+      <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+      <mat-datepicker #endPicker></mat-datepicker>
+    </mat-form-field>
+    <br />
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Category</mat-label>
+      <input matInput />
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Notes Hint</mat-label>
+      <input matInput />
+    </mat-form-field>
+  </form>
+</div>
