Secondary drawer transaction filter UI complete.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-toolbar [sidebar]="drawer" [secondarySidebar]="secondaryDrawer"></app-toolbar>
 <mat-drawer-container hasBackdrop="true" (click)="drawer.close()" class="remaining-height">
-  <mat-drawer #drawer mode="over">
+  <mat-drawer #drawer mode="over" autoFocus="false">
     <app-sidebar-content></app-sidebar-content>
   </mat-drawer>
-  <mat-drawer #secondaryDrawer mode="over" position="end">
+  <mat-drawer #secondaryDrawer mode="over" position="end" autoFocus="false">
     <app-transaction-filter-form
       *ngIf="router.url === '/transactions'"
     ></app-transaction-filter-form>
