--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -1,41 +1,46 @@
 <div class="container">
-  <p>Transaction Filter</p>
+  <div class="mid-align">
+    <div class="header">Transaction Filter</div>
+    <span class="spacer"></span>
+    <button mat-icon-button (click)="onClose()">
+      <mat-icon>clear</mat-icon>
+    </button>
+  </div>
 
   <form>
     <mat-form-field appearance="outline">
       <mat-label>Start Amount</mat-label>
       <input matInput />
     </mat-form-field>
-    <br />
     <mat-form-field appearance="outline">
       <mat-label>End Amount</mat-label>
       <input matInput />
     </mat-form-field>
     <br />
-    <br />
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Start Date</mat-label>
       <input matInput [matDatepicker]="startPicker" />
       <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
       <mat-datepicker #startPicker></mat-datepicker>
     </mat-form-field>
-    <br />
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>End Date</mat-label>
       <input matInput [matDatepicker]="endPicker" />
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
       <mat-datepicker #endPicker></mat-datepicker>
     </mat-form-field>
     <br />
-    <br />
     <mat-form-field appearance="outline">
       <mat-label>Category</mat-label>
       <input matInput />
     </mat-form-field>
-    <br />
     <mat-form-field appearance="outline">
       <mat-label>Notes Hint</mat-label>
       <input matInput />
     </mat-form-field>
+    <div class="btn-div">
+      <button mat-raised-button color="primary" class="ok-btn" type="button">OK</button>
+      <button mat-raised-button type="button">Clear</button>
+    </div>
   </form>
 </div>
