--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -86,6 +86,7 @@
       <mat-label>Notes Hint</mat-label>
       <input matInput type="text" autocomplete="off" formControlName="notesHint" />
     </mat-form-field>
+    <br />
     <mat-form-field appearance="outline">
       <mat-label>Sort</mat-label>
       <mat-select formControlName="sort">
@@ -94,6 +95,10 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+    <mat-radio-group>
+      <mat-radio-button value="asc">Ascending</mat-radio-button>
+      <mat-radio-button value="desc">Descending</mat-radio-button>
+    </mat-radio-group>
     <div class="btn-div">
       <app-loading-button class="ok-btn">OK</app-loading-button>
       <button mat-raised-button type="button" (click)="onClear()">Clear</button>
