Queries are now loaded into the transaction filter form.

--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -102,7 +102,7 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-radio-group>
+    <mat-radio-group formControlName="order">
       <mat-radio-button value="asc">Ascending</mat-radio-button>
       <mat-radio-button value="desc">Descending</mat-radio-button>
     </mat-radio-group>
