--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -97,7 +97,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Sort</mat-label>
       <mat-select formControlName="sortField">
-        <mat-option *ngFor="let sortable of sortables" [value]="sortable">
+        <mat-option *ngFor="let sortable of sortables" [value]="sortable.toLowerCase()">
           {{ sortable }}
         </mat-option>
       </mat-select>
