--- a/src/app/components/transaction-filter-form/transaction-filter-form.component.html
+++ b/src/app/components/transaction-filter-form/transaction-filter-form.component.html
@@ -48,13 +48,13 @@
       <input
         matInput
         [matDatepicker]="startPicker"
-        id="startDateInput"
-        formControlName="startDate"
+        id="startTimeInput"
+        formControlName="startTime"
         autocomplete="off"
       />
       <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
       <mat-datepicker #startPicker></mat-datepicker>
-      <mat-error *ngIf="filterForm?.get('startDate')?.hasError('invalid')">
+      <mat-error *ngIf="filterForm?.get('startTime')?.hasError('invalid')">
         Invalid date.
       </mat-error>
     </mat-form-field>
@@ -63,17 +63,17 @@
       <input
         matInput
         [matDatepicker]="endPicker"
-        id="endDateInput"
-        formControlName="endDate"
+        id="endTimeInput"
+        formControlName="endTime"
         autocomplete="off"
       />
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
       <mat-datepicker #endPicker></mat-datepicker>
-      <mat-error *ngIf="filterForm?.get('endDate')?.hasError('invalid')"> Invalid date.</mat-error>
+      <mat-error *ngIf="filterForm?.get('endTime')?.hasError('invalid')"> Invalid date.</mat-error>
       <mat-error
         *ngIf="
-          !filterForm?.get('endDate')?.hasError('invalid') &&
-          filterForm?.get('endDate')?.hasError('tooLow')
+          !filterForm?.get('endTime')?.hasError('invalid') &&
+          filterForm?.get('endTime')?.hasError('tooLow')
         "
       >
         Too Low.</mat-error
@@ -83,7 +83,7 @@
     <mat-progress-bar mode="indeterminate" *ngIf="isCategoryLoading"></mat-progress-bar>
     <mat-form-field appearance="outline">
       <mat-label>Category</mat-label>
-      <mat-select formControlName="category">
+      <mat-select formControlName="category" [disabled]="isCategoryLoading">
         <mat-option *ngFor="let catName of catNames" [value]="catName">
           {{ catName }}
         </mat-option>
