--- a/src/app/pages/transactions/transactions.component.css
+++ b/src/app/pages/transactions/transactions.component.css
@@ -10,3 +10,12 @@
 table {
   width: 100%;
 }
+
+.table-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
