--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -29,7 +29,9 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-
+      <div *ngIf="isLoading" class="table-spinner">
+        <mat-spinner diameter="30"></mat-spinner>
+      </div>
       <mat-paginator [pageSizeOptions]="allowedLimits" showFirstLastButtons></mat-paginator>
     </div>
   </div>
