--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -15,7 +15,13 @@
         </ng-container>
         <ng-container matColumnDef="amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            [ngStyle]="{ color: element.amount > 0 ? 'green' : 'red' }"
+          >
+            {{ element.amount > 0 ? '+' : '' }}{{ element.amount }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
