--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -33,7 +33,12 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns" class="row"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          class="row"
+          (click)="onRowClick(row)"
+        ></tr>
       </table>
       <div *ngIf="isLoading" class="table-spinner">
         <mat-spinner diameter="30"></mat-spinner>
