--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -11,7 +11,9 @@
       <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef>No.</th>
-          <td mat-cell *matCellDef="let element">{{ element.index }}</td>
+          <td mat-cell *matCellDef="let element; let i = index">
+            {{ i + 1 + paginator?.pageIndex * paginator?.pageSize }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
@@ -43,7 +45,11 @@
       <div *ngIf="isLoading" class="table-spinner">
         <mat-spinner diameter="30"></mat-spinner>
       </div>
-      <mat-paginator [pageSizeOptions]="allowedLimits" showFirstLastButtons></mat-paginator>
+      <mat-paginator
+        #paginator
+        [pageSizeOptions]="allowedLimits"
+        showFirstLastButtons
+      ></mat-paginator>
     </div>
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
