--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -12,7 +12,7 @@
         <ng-container matColumnDef="index">
           <th mat-header-cell *matHeaderCellDef>No.</th>
           <td mat-cell *matCellDef="let element; let i = index">
-            {{ i + 1 + paginator?.pageIndex * paginator?.pageSize }}
+            {{ i + 1 + (paginator?.pageIndex || 0) * (paginator?.pageSize || 10) }}
           </td>
         </ng-container>
         <ng-container matColumnDef="amount">
@@ -54,3 +54,4 @@
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
 </div>
+<app-fab-button iconName="add" (click)="onAddClick()"></app-fab-button>
