Categories now loading in add transaction.

--- a/src/app/components/create-transaction/create-transaction.component.html
+++ b/src/app/components/create-transaction/create-transaction.component.html
@@ -30,7 +30,8 @@
   <div class="btn-div">
     <app-loading-button
       btnText="Create"
-      [loading]="isLoading || isCategoryLoading"
+      [loading]="isLoading"
+      [disabled]="isCategoryLoading"
       (click)="onCreateClick()"
     ></app-loading-button>
   </div>
