--- a/src/app/pages/categories/categories.component.css
+++ b/src/app/pages/categories/categories.component.css
@@ -2,3 +2,31 @@
   margin-top: 10px;
   margin-bottom: 50px;
 }
+
+table {
+  width: 100%;
+}
+
+.table-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+mat-spinner {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
+.row:hover {
+  background: whitesmoke;
+  cursor: pointer;
+}
