--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -2,6 +2,50 @@
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
   <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100" class="content">
     <app-action-header-card header="Categories"></app-action-header-card>
+
+    <div class="mat-elevation-z4">
+      <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="index">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef class="center">Name</th>
+          <td mat-cell *matCellDef="let element" class="center">{{ element.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="sum">
+          <th mat-header-cell *matHeaderCellDef class="center">Sum</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            class="center"
+            [ngStyle]="{ color: element.sum > 0 ? 'green' : 'red' }"
+          >
+            {{ element.sum > 0 ? '+' : '' }}{{ element.sum }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="right">
+            <button mat-icon-button color="warn" (click)="onDeleteClick($event, element)">
+              <mat-icon>delete_outline</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; let ind = index; columns: displayedColumns"
+          class="row"
+          (click)="onRowClick(row, ind)"
+        ></tr>
+      </table>
+      <div *ngIf="isLoading" class="table-spinner">
+        <mat-spinner diameter="30"></mat-spinner>
+      </div>
+    </div>
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
 </div>
+<app-fab-button [disabled]="isLoading" iconName="add" (click)="onAddClick()"></app-fab-button>
