--- a/src/app/pages/transactions/transactions.component.css
+++ b/src/app/pages/transactions/transactions.component.css
@@ -11,7 +11,9 @@ table {
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
+mat-spinner {
   margin-top: 10px;
   margin-bottom: 10px;
 }
