--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -3,6 +3,10 @@
   <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100" class="content">
     <app-action-header-card header="Categories"></app-action-header-card>
 
+    <mat-progress-bar
+      mode="indeterminate"
+      *ngIf="isLoading || delLoaderCount > 0"
+    ></mat-progress-bar>
     <div class="mat-elevation-z4">
       <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="index">
@@ -26,8 +30,13 @@
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element" class="right">
-            <button mat-icon-button color="warn" (click)="onDeleteClick($event, element)">
+          <td mat-cell *matCellDef="let element; let i = index" class="right">
+            <button
+              mat-icon-button
+              color="warn"
+              (click)="onDeleteClick($event, element, i)"
+              [disabled]="delLoaders[element.name] === true"
+            >
               <mat-icon>delete_outline</mat-icon>
             </button>
           </td>
@@ -41,9 +50,6 @@
           (click)="onRowClick(row, ind)"
         ></tr>
       </table>
-      <div *ngIf="isLoading" class="table-spinner">
-        <mat-spinner diameter="30"></mat-spinner>
-      </div>
     </div>
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
