--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -28,4 +28,13 @@
       [isChartLoading]="isBalanceLineLoading"
     ></app-chart-card>
   </div>
+  <div fxFlex="50" fxFlex.xs="34">
+    <app-chart-card
+      #transactionCountChart
+      titleIcon="format_list_numbered"
+      title="Transaction Count Chart"
+      subtitle="Shows how your transaction count varied over time."
+      [isChartLoading]="isTransactionCountLineLoading"
+    ></app-chart-card>
+  </div>
 </div>
