More Links added to chart cards.

--- a/src/app/components/chart-card/chart-card.component.html
+++ b/src/app/components/chart-card/chart-card.component.html
@@ -8,6 +8,6 @@
   <mat-card-content [id]="chartHolderID"></mat-card-content>
   <mat-divider></mat-divider>
   <mat-card-actions align="end">
-    <button mat-icon-button><mat-icon>open_in_new</mat-icon></button>
+    <button mat-icon-button [routerLink]="moreLink"><mat-icon>open_in_new</mat-icon></button>
   </mat-card-actions>
 </mat-card>
