--- a/src/app/pages/debit-pie/debit-pie.component.html
+++ b/src/app/pages/debit-pie/debit-pie.component.html
@@ -1,1 +1,8 @@
-<p>debit-pie works!</p>
+<app-chart-card
+  #debitPieChart
+  titleIcon="pie_chart"
+  title="Debit Pie Chart"
+  subtitle="Shows your category-wise debits."
+  [isChartLoading]="isDebitPieLoading"
+  [showActions]="false"
+></app-chart-card>
