--- a/src/app/pages/credit-pie/credit-pie.component.html
+++ b/src/app/pages/credit-pie/credit-pie.component.html
@@ -1,1 +1,38 @@
-<p>credit-pie works!</p>
+<app-chart-card
+  #creditPieChart
+  titleIcon="pie_chart"
+  title="Credit Pie Chart"
+  subtitle="Shows your category-wise credits."
+  [isChartLoading]="isCreditPieLoading"
+  [showActions]="false"
+></app-chart-card>
+<br />
+<app-action-header-card
+  header="Data Points"
+  iconName="filter_alt"
+  [onAction]="secDrawService.toggle.bind(secDrawService)"
+></app-action-header-card>
+<mat-progress-bar mode="indeterminate" *ngIf="isCreditPieLoading"></mat-progress-bar>
+<div class="mat-elevation-z4">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="sum">
+      <th mat-header-cell *matHeaderCellDef>Sum</th>
+      <td mat-cell *matCellDef="let element" [ngStyle]="{ color: 'green' }">{{ element.sum }}</td>
+    </ng-container>
+    <ng-container matColumnDef="percentage">
+      <th mat-header-cell *matHeaderCellDef>Percentage</th>
+      <td mat-cell *matCellDef="let element">{{ element.percentage }}%</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; let ind = index; columns: displayedColumns"></tr>
+  </table>
+</div>
+<br />
