Formatted the landing page. Added about.

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div fxFlex fxLayout="row" fxLayoutAlign="center">
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+  <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100" class="content">
+    <mat-card>
+      <mat-card-header>
+        <mat-icon mat-card-avatar>info</mat-icon>
+        <mat-card-title>About</mat-card-title>
+        <mat-card-subtitle>LedgerKeep.com</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content> &#169; 2021 LedgerKeep Inc. All Rights Reserved. </mat-card-content>
+    </mat-card>
+  </div>
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+</div>
