--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,2 +1,21 @@
-<button mat-raised-button (click)="googleLogin()">Login with Google</button>
-<button mat-raised-button (click)="facebookLogin()">Login with Facebook</button>
+<div fxFlex fxLayout="column" fxLayoutAlign="center center">
+  <button
+    mat-raised-button
+    (click)="googleLogin()"
+    [color]="googleColor"
+    (mouseenter)="googleColor = 'accent'"
+    (mouseleave)="googleColor = undefined"
+  >
+    Login with Google
+  </button>
+  <button
+    mat-raised-button
+    (click)="facebookLogin()"
+    class="bottom-btn"
+    [color]="fbColor"
+    (mouseenter)="fbColor = 'accent'"
+    (mouseleave)="fbColor = undefined"
+  >
+    Login with Facebook
+  </button>
+</div>
