--- a/src/app/pages/debit-pie/debit-pie.component.html
+++ b/src/app/pages/debit-pie/debit-pie.component.html
@@ -1,38 +1,52 @@
-<app-chart-card
-  #debitPieChart
-  titleIcon="pie_chart"
-  title="Debit Pie Chart"
-  subtitle="Shows your category-wise debits."
-  [isChartLoading]="isDebitPieLoading"
-  [showActions]="false"
-></app-chart-card>
-<br />
-<app-action-header-card
-  header="Data Points"
-  iconName="filter_alt"
-  [onAction]="secDrawService.toggle.bind(secDrawService)"
-></app-action-header-card>
-<mat-progress-bar mode="indeterminate" *ngIf="isDebitPieLoading"></mat-progress-bar>
-<div class="mat-elevation-z4">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-    <ng-container matColumnDef="sum">
-      <th mat-header-cell *matHeaderCellDef>Sum</th>
-      <td mat-cell *matCellDef="let element" [ngStyle]="{ color: 'red' }">-{{ element.sum }}</td>
-    </ng-container>
-    <ng-container matColumnDef="percentage">
-      <th mat-header-cell *matHeaderCellDef>Percentage</th>
-      <td mat-cell *matCellDef="let element">{{ element.percentage }}%</td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; let ind = index; columns: displayedColumns"></tr>
-  </table>
+<div fxFlex fxLayout="column">
+  <app-chart-card
+    #debitPieChart
+    titleIcon="pie_chart"
+    title="Debit Pie Chart"
+    subtitle="Shows your category-wise debits."
+    [isChartLoading]="isDebitPieLoading"
+    [showActions]="false"
+  >
+  </app-chart-card>
+  <div fxFlex fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+    <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100" class="content">
+      <app-action-header-card
+        header="Data Points"
+        iconName="filter_alt"
+        [onAction]="secDrawService.toggle.bind(secDrawService)"
+      ></app-action-header-card>
+      <mat-progress-bar mode="indeterminate" *ngIf="isDebitPieLoading"></mat-progress-bar>
+      <div class="mat-elevation-z4">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="index">
+            <th mat-header-cell *matHeaderCellDef>No.</th>
+            <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            <td mat-footer-cell *matFooterCellDef>Total</td>
+          </ng-container>
+          <ng-container matColumnDef="sum">
+            <th mat-header-cell *matHeaderCellDef>Sum</th>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{ color: 'red' }">
+              -{{ element.sum }}
+            </td>
+            <td mat-footer-cell *matFooterCellDef [ngStyle]="{ color: 'red' }">-{{ total }}</td>
+          </ng-container>
+          <ng-container matColumnDef="percentage">
+            <th mat-header-cell *matHeaderCellDef>Percentage</th>
+            <td mat-cell *matCellDef="let element">{{ element.percentage }}%</td>
+            <td mat-footer-cell *matFooterCellDef>100%</td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; let ind = index; columns: displayedColumns"></tr>
+          <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+        </table>
+      </div>
+    </div>
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+  </div>
 </div>
-<br />
