Home page UI complete.

--- a/src/app/components/toolbar/toolbar.component.sass
+++ b/src/app/components/toolbar/toolbar.component.sass
@@ -25,7 +25,8 @@
   /* The toolbar actions should not go very close to right boundary. */
   margin-right: 10px
 
-@media screen and ( min-width: $min-medium-screen )
+/* Big screens. */
+@media screen and ( min-width: $max-small-screen )
   .toolbar-logo
     /* Logo and title will be more toward the middle on big screens. */
     margin-left: 15%
@@ -33,4 +34,3 @@
   .toolbar-actions
     /* Toolbar actions will be more toward the middle on big screens. */
     margin-right: 15%
-
