--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z4 toolbar">
+<mat-toolbar class="toolbar">
   <button mat-icon-button *ngIf="authService.isLoggedIn()">
     <mat-icon>menu</mat-icon>
   </button>
