--- a/src/app/styles/variables.sass
+++ b/src/app/styles/variables.sass
@@ -1,3 +1,5 @@
-$min-small-screen: 600px
-$min-medium-screen: 768px
-$min-large-screen: 992px
+$max-x-small-screen: 576px
+$max-small-screen: 768px
+$max-medium-screen: 992px
+$max-large-screen: 1200px
+$max-x-large-screen: 1400px
